--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
     <h3>Guessed Letters: <span id="guessedletters"></span></h3>
 </div>
 
-<div class="container" id="remaining">
-    <h3>Guesses Remaining: <span id="guessesRemaining"></span></h3>
+<div class="container" >
+    <h3>Guesses Remaining: <span id="guesses"></span></h3>
 </div>
 
- <div class="container" id="wins">
-   <h2>Wins: </h2>
+ <div class="container">
+   <h2>Wins: <span id="wins"></span></h2>
  </div>
- <div id= "losses">
-   <h2>Losses: </h2>
+ <div class="container">
+   <h2>Losses: <span id="losses"></span></h2>
  </div>
 
  
