big refactor, fixed multiple bugs

--- a/index.html
+++ b/index.html
@@ -1,40 +1,45 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <link type="text/css" href="style.css"/>
     <title>title</title>
   </head>
   <body>
-  <div class="container" id="header">
-  <header>
-      <h1>Snoopy Hangman</h1>
-  </header>
-  <img src="assets/images/snoopycar.jpg"/>
-  </div>
+    <div class="container" id="header">
+      <header>
+        <h1>Snoopy Hangman</h1>
+      </header>
+      <img src="assets/images/snoopycar.jpg" />
+    </div>
 
-  <div class="container" id="display">
+    <div class="container" id="display">
       <h2>Current Word: <span id="underscores"></span></h2>
-  </div>
+    </div>
 
-  <div class="container" >
-    <h3>Guessed Letters: <span id="guessedletters"></span></h3>
-</div>
+    <div class="container">
+      <h3>Guessed Letters: <span id="guessedletters"></span></h3>
+    </div>
 
-<div class="container" >
-    <h3>Guesses Remaining: <span id="guesses"></span></h3>
-</div>
+    <div class="container">
+      <h3>Guesses Remaining: <span id="guesses"></span></h3>
+    </div>
 
- <div class="container">
-   <h2>Wins: <span id="wins"></span></h2>
- </div>
- <div class="container">
-   <h2>Losses: <span id="losses"></span></h2>
- </div>
+    <div class="container">
+      <h2>Wins: <span id="wins"></span></h2>
+    </div>
+    <div class="container">
+      <h2>Losses: <span id="losses"></span></h2>
+    </div>
 
- 
+    <div id="youWin"></div>
 
- <script type="text/javascript" src="assets/javascript/thirdattempt.js"></script>
+    <div id="youLose"></div>
 
+    <script
+      type="text/javascript"
+      src="assets/javascript/fourthattempt.js"
+    ></script>
   </body>
 </html>
